# battwin

./: CHANGELOG.md  LICENSE  NOTICE  README.md  SPEC.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
assets/data/: battery_data.csv  battery_data.json  battery_data.parquet
docs/: DEVELOPMENT.md  index.md
examples/: cr2032_example.py  dev_digital_twin.py
src/battwin/: __init__.py  __main__.py  cli.py  envelope.py  validate.py
src/battwin/schemas/: twin-envelope.schema.json
src/battwin/shapes/: twin-envelope.shapes.ttl
src/echoed/: __init__.py  base.py
src/echoed/data/: __init__.py  ingestion.py  validation.py
src/echoed/metamodel/: __init__.py
src/echoed/workflow/: orchestrator.py
tests/: test_bdf_ingestion.py  test_cli.py  test_envelope.py  test_shacl.py  test_validate.py
