[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoed"
version = "0.1.0"
description = "A battery digital twin framework"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Simon Clark"},
]
keywords = ["battery", "digital-twin", "electrochemistry", "data-integration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.0",
  "rdflib>=7.0",
  "requests>=2.31",
  "owlrl>=6.0",
  "EMMOntoPy>=0.7.2",
]

[project.optional-dependencies]
bdf = [
  "bdf",
  "bdat",
  "pandas>=2.0",
  "pyarrow>=14.0",
]
viz = ["plotly>=5.18"]
dev = [
  "black>=24.3",
  "mypy>=1.7",
  "pre-commit>=3.5",
  "pytest>=7.4",
  "ruff>=0.4",
  "types-requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/DigiBatt/echoed"
Repository = "https://github.com/DigiBatt/echoed"
Documentation = "https://github.com/DigiBatt/echoed/tree/main/docs"
Issues = "https://github.com/DigiBatt/echoed/issues"
Changelog = "https://github.com/DigiBatt/echoed/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
